--- a/src/Fetch.css
+++ b/src/Fetch.css
@@ -1,14 +1,43 @@
 .listClass {
-background-color: rgb(81, 117, 153);
+background-color:white;
 color : black;
 overflow-y:auto;
-height: 800px;
-margin-top: 60px;
-margin-bottom: 240px;
+/* overflow: hidden; */
+height:500px;
+width: 700px;
+margin-top: 10%;
+margin-bottom: 75%;
 border: 0ch;
+padding: 0px;
 
-/* align-content:  center */
 }
+.h1tag {
+    margin-bottom: 0;
+}
+.classK {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start; 
+    font-size: 0.75em;
+    
+}
+.divClass {
+    background-color: white;
+    width: 100%;
+    height : 70%;
+    border-bottom: 1px solid rgb(205, 207, 205);
+    padding: 0px;
+    padding-block-start: 0em;
+    margin: 0px ;
+   
+}
+
+ /* .divClass td {
+    flex-direction: column;
+    display: flex;
+    align-items: flex-start;
+ } */
 input[type=text]  {
     width: 60%;
     padding: 20px;
@@ -21,29 +50,19 @@ input[type=text]  {
     background-color: azure;
     padding: 20px;
     margin: 8px 0;
-    /* box-sizing: border-box; */
-
   }
 
-.divClass {
-    background-color: floralwhite;
-    width: 80%;
-    height : 70%;
-    border: 3px solid rgb(0, 2, 0);
-    padding: 20px;
-    margin: 20px;
-    align-items: center
-}
+  /* b {
+      font-size : px;
+  } */
+
 
 img {
+    border: 2px solid lightgray;
     border-radius: 50%;
-    background-color: lightblue
+    background-color: white;
   }
 
-.classK {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start; 
-    width : 400px
+ul {
+    padding-inline-start: 0em;
 }
